--- a/404.html
+++ b/404.html
@@ -4,7 +4,9 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <script>window.params = (() => {
       const parts = window.location.pathname.split('/');
-      const code = decodeURIComponent(parts.pop() || parts.pop());
+      parts.shift();
+      parts.shift();
+      const code = decodeURIComponent(parts.join('/'));
       return JSON.parse(atob(code))
     })()</script>
     <meta property="og:title" content="PayMFC Donation">
