--- a/404.html
+++ b/404.html
@@ -20,12 +20,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <link rel="stylesheet" href="../PayMFC-SDK/assets/style.css">
+    <link rel="stylesheet" href="/PayMFC-SDK/assets/style.css">
     <link rel="stylesheet" href="assets/style.css">
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name"><img src="../PayMFC-SDK/assets/logos/paymfc_no_bg.svg" width="200"></h1>
+      <h1 class="project-name"><img src="/PayMFC-SDK/assets/logos/paymfc_no_bg.svg" width="200"></h1>
     </header>
     <main id="content" class="main-content" role="main">
     </main>
