--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
       const button = document.querySelector('#content > .donate-button');
       title.innerText += name;
       avatar.setAttribute('src', image || 'https://i2.wp.com/profile.mfcoin.net/img/guest_avatar.png?ssl=1');
-      button.setAttribute('href', 'mfcoin://' + address)
+      button.setAttribute('href', 'mfcoin:' + address)
     </script>
   </body>
 </html>
