--- a/404.html
+++ b/404.html
@@ -23,7 +23,7 @@
     <main id="content" class="main-content" role="main">
       <img class="avatar">
       <div class="name"></div>
-      <a class="donate-button">Задонатить</a>
+      <div class="donate-button"><a>Задонатить</a></div>
     </main>
     <script>
       const parts = window.location.pathname.split('/');
@@ -31,11 +31,12 @@
       parts.shift();
       const { name, address, image } = JSON.parse(atob(decodeURIComponent(parts.join('/'))));
       const title = document.querySelector('head > title');
-      const avatar = document.querySelector('#content > .avatar');
-      const nameElement = document.querySelector('#content > .name');
-      const button = document.querySelector('#content > .donate-button');
+      const avatar = document.querySelector('#content .avatar');
+      const nameElement = document.querySelector('#content .name');
+      const button = document.querySelector('#content .donate-button > a');
       title.innerText += name;
       avatar.setAttribute('src', image || 'https://i2.wp.com/profile.mfcoin.net/img/guest_avatar.png?ssl=1');
+      nameElement.innerText = name;
       button.setAttribute('href', 'mfcoin:' + address)
     </script>
   </body>
