--- a/404.html
+++ b/404.html
@@ -18,8 +18,10 @@
   </head>
   <body>
     <header class="page-header" role="banner">
-      <h1 class="project-name"><img src="/PayMFC-SDK/assets/logos/paymfc_no_bg.svg"></h1>
-      <div class="pad"></div>
+      <h1 class="project-name">
+        <img src="/PayMFC-SDK/assets/logos/paymfc_no_bg.svg">
+        <div class="pad"></div>
+      </h1>
     </header>
     <main id="content" class="main-content" role="main">
       <img class="avatar">
