--- a/404.html
+++ b/404.html
@@ -14,7 +14,7 @@
     <meta name="theme-color" content="#157878">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <link rel="stylesheet" href="/PayMFC-SDK/assets/css/style.css">
-    <link rel="stylesheet" href="../assets/style.css">
+    <link rel="stylesheet" href="/PayMFC-donate/assets/style.css">
   </head>
   <body>
     <header class="page-header" role="banner">
